--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2742,7 +2742,7 @@ input, select, textarea {
 
 	#banner {
 		background-color: #2a2b2e;
-		background-image: url("images/overlay2.png"), url("../../images/cello-playing-blackshirt.jpeg");
+		background-image: url("images/overlay2.png"), url("../../images/gerald-celloJPG.JPG");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
